enum Orientation {
    HORIZONTAL,
    VERTICAL,
    DIAGONAL,
    IMPRECISE
}
